--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@notionhq/client": "^0.4.13",
     "csv-parse": "^5.0.3",
     "dotenv": "^16.0.0",
-    "fs-extra": "^10.0.0"
+    "fs-extra": "^10.0.0",
+    "node-html-markdown": "^1.1.3"
   }
 }
