--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "license": "ISC",
   "devDependencies": {
     "jsdom": "^19.0.0",
-    "node-fetch": "^3.1.0"
+    "node-fetch": "^3.2.2"
   },
   "dependencies": {
-    "@notionhq/client": "^0.4.13",
-    "csv-parse": "^5.0.3",
+    "@aws-sdk/client-s3": "^3.53.1",
+    "@notionhq/client": "^1.0.2",
+    "@tryfabric/martian": "^1.1.1",
+    "csv-parse": "^5.0.4",
     "dotenv": "^16.0.0",
-    "fs-extra": "^10.0.0",
-    "node-html-markdown": "^1.1.3"
+    "fs-extra": "^10.0.1",
+    "node-html-markdown": "^1.1.3",
+    "uuid": "^8.3.2"
   }
 }
